[package]
name = "glib"
version = "0.1.0"
authors = ["IcyDefiance <icydefiance@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.1.7"
actix-web = "1.0.8"
chrono = "0.4.9"
listenfd = "0.3.3"
maplit = "1.0.2"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
serde_repr = "0.1.5"
